# mower-robot

./: .gitignore  README.md  package.json
.cursor/rules/: end-session.mdc  guideline.mdc  start-session.mdc
_bmad-output/brainstorming/: brainstorming-session-2026-01-28.md
_bmad-output/excalidraw-diagrams/: 01-system-architecture-overview.excalidraw  02-ros2-node-graph.excalidraw  03-communication-stack.excalidraw  04-data-flow-diagram.excalidraw
_bmad-output/implementation-artifacts/: 1-1-arduino-motor-control-foundation.md  1-2-ros-2-serial-bridge.md  1-3-teleoperation-via-dashboard.md  1-4-real-time-telemetry-display.md  2-1-lidar-integration.md  2-2-robot-description-tf.md  2-3-slam-mapping.md  2-4-map-visualization-on-dashboard.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-01-29.md  prd.md  product-brief-mower-roboto-2026-01-28.md
_bmad/_config/: files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
apps/backend/app/: main.py  settings.py
apps/frontend/: index.html  pnpm-lock.yaml
apps/frontend/src/: App.tsx
apps/ros2/src/mower_bringup/: CMakeLists.txt  package.xml
apps/ros2/src/mower_bringup/config/: serial_bridge_params.yaml
apps/ros2/src/mower_bringup/launch/: lidar.launch.py  robot.launch.py  serial_bridge.launch.py  teleop_bridge.launch.py
apps/ros2/src/mower_hardware/: package.xml  setup.cfg  setup.py
apps/ros2/src/mower_hardware/mower_hardware/: __init__.py  protocol.py  serial_bridge.py
apps/ros2/src/mower_hardware/test/: test_protocol.py
apps/ros2/src/mower_msgs/: CMakeLists.txt  package.xml
apps/ros2/src/mower_msgs/msg/: MowerStatus.msg  SerialStatus.msg
backend/: requirements.txt
backend/app/: __init__.py  main.py  settings.py
deploy/: README.md  rpi.sh
deploy/services/: mower-backend.service  mower-ros2-bridge.service  mower-teleop-bridge.service
docs/: project-context.md
embedded/Arduino/: robot_mower.ino
embedded/RPI/: README.md  deploy.sh  mower-backend.service
embedded/arduino/: platformio.ini  robot_mower.ino
src/: App.tsx  index.css
src/components/: BatteryIndicator.tsx  ConnectionStatus.tsx  Joystick.tsx  MowerMap.tsx  RobotImage.tsx  ScheduleCard.tsx  StatusIndicator.tsx
src/pages/: Dashboard.tsx
src/services/: wsClient.ts
(+70 files in other folders)
