<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mower_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for Mower Robot</description>
  <maintainer email="pierrot@example.com">Pierrot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mower_hardware</exec_depend>
  <exec_depend>mower_msgs</exec_depend>
  <exec_depend>ldlidar_ros2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
